--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/react-dom": "18.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "md5": "^2.3.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/md5": "^2.3.2"
   }
 }
