--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
@@ -23,6 +24,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/md5": "^2.3.2"
   }
 }
