--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "cosmicjs": "^4.3.7",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
+    "moment": "^2.29.4",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.3.1",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/md5": "^2.3.2"
+    "@types/md5": "^2.3.2",
+    "@types/multer": "^1.4.7"
   }
 }
